--- a/less/content.less
+++ b/less/content.less
@@ -161,8 +161,8 @@ main > section{
     grid-column: ~" 1 / -1 ";
     font-size: 13px;
     line-height: 18px;
-    font-weight: 400;
     height: 18px;
+    font-weight: 400;
     outline-color: transparent;
     color: #000000;
     padding: 0 7px 1px 7px;
@@ -184,7 +184,7 @@ main > section{
         background: @orange;
     }
     &.green{
-
+        background: @green;
     }
 }
 
@@ -248,4 +248,5 @@ main > section{
 //spacing
 .tall{
     padding-top: 20px;
+    font-family: 'SegoeUISemiLight';
 }
