--- a/less/grid.less
+++ b/less/grid.less
@@ -107,7 +107,7 @@ hr{
     .title, .desc{
         grid-column: span 3;
     }
-    p {
+    p, .content {
         grid-column: span 2;
     
         .title{
@@ -159,7 +159,6 @@ hr{
         width: 650%;
         border: none;
         background: @ltmid-gray;
-        //position: absolute;
         bottom: 0px;
         height: 1px;
         margin: 10px;
