--- a/less/typography.less
+++ b/less/typography.less
@@ -74,6 +74,9 @@ h5{
     font-size: 24px;
     line-height: 30px;
     color: @text-lt-gray;
+    &.heavy{
+        font-family: 'SegoeUISemiLight';
+    }
 }
 h6{
     font-weight: 400;
