--- a/less/typography.less
+++ b/less/typography.less
@@ -54,6 +54,10 @@ h2 {
         font-weight: 900;
         color: @badge-gray;
     }
+    &.light{
+        
+        font-weight: 100;
+    }
 }
 
 h3 {
@@ -65,9 +69,9 @@ h3 {
 
 h4{
     font-size: 52px;
-    font-weight: 600;
     line-height: 60px;
     color: @body-text-black;
+    font-family: 'SegoeUISemiBold';
 }
 h5{
     font-weight: 100;
@@ -95,6 +99,7 @@ p {
         font-size: 22px;
         line-height: 28px;
         font-weight: 400;
+        font-family: 'SegoeUISemiBold';
     }
     &.ms-store{
         font-size: 24px;
@@ -122,6 +127,7 @@ p {
     .title{
     font-size: 20px;
     line-height:30px; 
+    font-family: 'SegoeUISemiBold';
     }
     .desc{
         font-size: 22px;
@@ -134,7 +140,8 @@ p {
         padding-top: 10px;
         padding-bottom: 10px;
         &:after{
-            content: "\B2352";
+            content: "\E70D";
+            font-family: "MWF-MDL2";
         }
     }
 }
@@ -164,8 +171,9 @@ a{
         text-decoration: none;
         text-transform: uppercase;
         &:after{
-            content: "\EB8E";
+            content: "\E76C";	
             padding-left: 20px;
+            font-family: "MWF-MDL2";
         }    
         &:hover{
             text-decoration: underline;
