--- a/less/grid.less
+++ b/less/grid.less
@@ -168,13 +168,55 @@ hr{
 
 //editorial sections
 .mag{
-    
+    grid-column-start: 2;
+    grid-column-end: 7;
     h2{
-        grid-column-start: 2;
-        grid-column-end: -1;
+        
         color: @body-text-black;
     }
+    .thirds {
+        .desc, .title {
+            grid-column: span 1;
+            margin-top: 10px;
+        }
+        .title {
+            font-size: 22px;
+            color: @text-gray;
+        }
+        .desc{
+            font-size: 18px;
+            font-family: 'SegoeUISemiLight';
+        }
+
+    }
 }
+
+#section-3-3{
+    .thirds{
+        .title{
+            font-size: 28px;
+            font-family: 'SegoeUISemiBold';
+            letter-spacing: .025em;
+            padding-bottom: 10px;
+        }
+        .desc{
+            font-size: 15px;
+            line-height: 20px;
+            padding-right: 100px;
+            margin-bottom: 90px;
+        }
+    }
+    .dos, .donts{
+        .title{
+            font-family: 'SegoeUISemiBold';
+            text-decoration: none;
+        }
+    }
+    .donts p{
+        text-decoration: line-through;
+    }
+}
+
 
 //base grid styles
 
