--- a/less/content.less
+++ b/less/content.less
@@ -21,6 +21,8 @@ main > section{
     padding-bottom: 95px;
     display: grid;  
 }
+
+//background colors
 #section-1{
     background: @lt-gray;
     &-1{
