--- a/less/typography.less
+++ b/less/typography.less
@@ -53,10 +53,19 @@ h2 {
     &.super{
         font-weight: 900;
         color: @badge-gray;
+        &.tall{
+            font-size: 80px;
+            line-height: 80px;
+        }
     }
     &.light{
         
         font-weight: 100;
+    }
+    &.heavy{
+        font-family: 'SegoeUISemiBold';
+        font-weight: 600;
+        color: @body-text-black;
     }
 }
 
