--- a/less/grid.less
+++ b/less/grid.less
@@ -81,7 +81,13 @@ header{
             }
             &#section-4-1{
                 h5{
-                    grid-column: span 8;
+                    grid-column: span 5;
+                }
+                .half{
+                    grid-column: span 3;
+                }
+                .title{
+                    padding-bottom: 30px;
                 }
     
             }
@@ -92,7 +98,7 @@ header{
 
 hr{
     border-top: 1px solid @hr-gray;
-    margin-top: 90px;
+    margin-top: 80px;
     margin-bottom: 60px;
     grid-column-start: 1;
     grid-column-end: 7;
@@ -206,28 +212,13 @@ hr{
         }
     }
     .dos, .donts{
-        grid-column: span 2;
+        grid-column: span 3;
         .title{
             font-family: 'SegoeUISemiBold';
             text-decoration: none;
         }
     }
-    .dos{
-        .title{
-            color: @text-green;
-        }
-        p {
-            padding-right: 50px;
-        }
-    }
-    .donts {
-        p{
-        text-decoration: line-through;
-        }
-        .title{
-            color: @text-red;
-        }
-    }
+
 }
 
 #section-3-4{
@@ -236,16 +227,51 @@ hr{
         .title{
             font-family: 'SegoeUISemiBold';
             text-decoration: none;
+            
+        }
+    }
+    .explanation .title{
+        font-size: 15px;
+        color: @text-gray;
+        font-weight: 600;
+        letter-spacing: .025em;
+    }
+    .dos, .donts{
+        .title{
             font-size: 22px;
         }
     }
-    .dos .title{
+
+}
+.dos{
+    .title{
         color: @text-green;
     }
-    .donts .title{
+    p {
+        padding-right: 50px;
+    }
+}
+.donts {
+    
+    p{
+    text-decoration: line-through;
+    }
+    .title{
         color: @text-red;
     }
 }
+#section-4-2{
+    .thirds h5{
+        padding-bottom: 10px;
+    }
+    .donts{
+        grid-column: span 3;
+        p{
+            padding-bottom: 10px;
+        }
+    }
+}
+
 //base grid styles
 
 h4{
