--- a/less/typography.less
+++ b/less/typography.less
@@ -81,6 +81,7 @@ h4{
     line-height: 60px;
     color: @body-text-black;
     font-family: 'SegoeUISemiBold';
+    font-weight: 600;
 }
 h5{
     font-weight: 100;
@@ -107,7 +108,7 @@ p {
     &.title{
         font-size: 22px;
         line-height: 28px;
-        font-weight: 400;
+        font-weight: 600;
         font-family: 'SegoeUISemiBold';
     }
     &.ms-store{
@@ -137,6 +138,11 @@ p {
     font-size: 20px;
     line-height:30px; 
     font-family: 'SegoeUISemiBold';
+    font-weight: 600;
+    &.large{
+        font-size: 22px;
+        line-height: 28px;
+    }
     }
     .desc{
         font-size: 22px;
@@ -191,5 +197,5 @@ a{
 }
 
 .red{
-    color: @red;
+    color: @text-red;
 }
