--- a/less/grid.less
+++ b/less/grid.less
@@ -56,6 +56,12 @@ header{
                 h1, h6{
                     grid-column: span 5;
                 }
+                &-1{
+                    h6,p{
+                        grid-column-start: 2;
+                        grid-column-end: 10;
+                    }
+                }
             }
             h3{
                 grid-column: span 9;
@@ -93,10 +99,7 @@ hr{
     .numeral{
         display: inline-block;
     }
-    h6,p{
-        grid-column-start: 2;
-        grid-column-end: 10;
-    }
+    
     p{
         padding-right: 100px;
     }
@@ -227,7 +230,6 @@ hr{
         .title{
             font-family: 'SegoeUISemiBold';
             text-decoration: none;
-            
         }
     }
     .explanation .title{
@@ -236,31 +238,10 @@ hr{
         font-weight: 600;
         letter-spacing: .025em;
     }
-    .dos, .donts{
-        .title{
-            font-size: 22px;
-        }
-    }
 
 }
-.dos{
-    .title{
-        color: @text-green;
-    }
-    p {
-        padding-right: 50px;
-    }
-}
-.donts {
-    
-    p{
-    text-decoration: line-through;
-    }
-    .title{
-        color: @text-red;
-        text-decoration: none;
-    }
-}
+
+//Brand expression
 #section-4-2{
     .thirds{
         h5,p{
@@ -280,6 +261,54 @@ hr{
     }
 }
 
+#section-4-3{
+    .half{
+        grid-column: span 3;
+        p{
+            grid-column-start: 1;
+            padding-bottom: 10px;
+        }
+    }
+}
+
+#section-4-8, #section-4-9{
+    .half, img{
+        grid-column: span 3;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 20px;
+        p{
+            padding-right: 0;
+            margin-top: 10px;
+        }
+        .half{
+            grid-column: span 1;
+            grid-template-columns: 1fr;
+            justify-items: stretch;
+        }
+    }
+}
+
+
+.dos{
+    .title{
+        color: @text-green;
+    }
+    p {
+        padding-right: 50px;
+    }
+}
+.donts {
+    
+    p{
+    text-decoration: line-through;
+    }
+    .title{
+        color: @text-red;
+        text-decoration: none;
+    }
+}
+
+
 .left, .middle, .right{
     grid-column: span 2;
     color: @nav-lt;
@@ -298,15 +327,7 @@ hr{
     font-family: 'SegoeUISemiBold';
     text-align: center;
 }
-#section-4-3{
-    .half{
-        grid-column: span 3;
-        p{
-            grid-column-start: 1;
-            padding-bottom: 10px;
-        }
-    }
-}
+
 
 //base grid styles
 
@@ -328,4 +349,12 @@ h5{
 }
 h6, h2, picture{
     grid-column: span 9;
+}
+
+.full{
+    grid-column: span 8;
+    text-decoration: none;
+    &:hover{
+        text-decoration: underline;
+    }
 }
