--- a/styles/main.css
+++ b/styles/main.css
@@ -348,6 +348,7 @@ h4 {
   line-height: 60px;
   color: #212121;
   font-family: 'SegoeUISemiBold';
+  font-weight: 600;
 }
 h5 {
   font-weight: 100;
@@ -375,7 +376,7 @@ p {
 p.title {
   font-size: 22px;
   line-height: 28px;
-  font-weight: 400;
+  font-weight: 600;
   font-family: 'SegoeUISemiBold';
 }
 p.ms-store {
@@ -403,6 +404,11 @@ p.large {
   font-size: 20px;
   line-height: 30px;
   font-family: 'SegoeUISemiBold';
+  font-weight: 600;
+}
+.thirds .title.large {
+  font-size: 22px;
+  line-height: 28px;
 }
 .thirds .desc {
   font-size: 22px;
@@ -452,6 +458,9 @@ a {
 }
 .cta a:hover {
   text-decoration: underline;
+}
+.red {
+  color: #a80000;
 }
 html {
   -webkit-box-sizing: border-box;
@@ -513,6 +522,11 @@ header nav {
 #mainArea main section#section-1 h6 {
   grid-column: span 5;
 }
+#mainArea main section#section-1-1 h6,
+#mainArea main section#section-1-1 p {
+  grid-column-start: 2;
+  grid-column-end: 10;
+}
 #mainArea main section h3 {
   grid-column: span 9;
 }
@@ -540,11 +554,6 @@ hr {
 }
 .half .numeral {
   display: inline-block;
-}
-.half h6,
-.half p {
-  grid-column-start: 2;
-  grid-column-end: 10;
 }
 .half p {
   padding-right: 100px;
@@ -669,23 +678,6 @@ hr {
   font-weight: 600;
   letter-spacing: .025em;
 }
-#section-3-4 .dos .title,
-#section-3-4 .donts .title {
-  font-size: 22px;
-}
-.dos .title {
-  color: #107c10;
-}
-.dos p {
-  padding-right: 50px;
-}
-.donts p {
-  text-decoration: line-through;
-}
-.donts .title {
-  color: #a80000;
-  text-decoration: none;
-}
 #section-4-2 .thirds h5,
 #section-4-2 .thirds p {
   padding-bottom: 10px;
@@ -701,6 +693,49 @@ hr {
 #section-4-2 .dos p,
 #section-4-2 .donts p {
   font-size: 15px;
+}
+#section-4-3 .half {
+  grid-column: span 3;
+}
+#section-4-3 .half p {
+  grid-column-start: 1;
+  padding-bottom: 10px;
+}
+#section-4-8 .half,
+#section-4-9 .half,
+#section-4-8 img,
+#section-4-9 img {
+  grid-column: span 3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 20px;
+}
+#section-4-8 .half p,
+#section-4-9 .half p,
+#section-4-8 img p,
+#section-4-9 img p {
+  padding-right: 0;
+  margin-top: 10px;
+}
+#section-4-8 .half .half,
+#section-4-9 .half .half,
+#section-4-8 img .half,
+#section-4-9 img .half {
+  grid-column: span 1;
+  grid-template-columns: 1fr;
+  justify-items: stretch;
+}
+.dos .title {
+  color: #107c10;
+}
+.dos p {
+  padding-right: 50px;
+}
+.donts p {
+  text-decoration: line-through;
+}
+.donts .title {
+  color: #a80000;
+  text-decoration: none;
 }
 .left,
 .middle,
@@ -722,13 +757,6 @@ hr {
   font-family: 'SegoeUISemiBold';
   text-align: center;
 }
-#section-4-3 .half {
-  grid-column: span 3;
-}
-#section-4-3 .half p {
-  grid-column-start: 1;
-  padding-bottom: 10px;
-}
 h4 {
   grid-column: span 5;
 }
@@ -748,4 +776,11 @@ h6,
 h2,
 picture {
   grid-column: span 9;
+}
+.full {
+  grid-column: span 8;
+  text-decoration: none;
+}
+.full:hover {
+  text-decoration: underline;
 }
