working on color grid

--- a/less/content.less
+++ b/less/content.less
@@ -247,6 +247,13 @@ main > section{
     }
 }
 
+.swatch{
+    padding: 20px 10px 5px;
+    display: grid;
+    font-size: 18px;
+    color: black;
+}
+
 //spacing
 .tall{
     padding-top: 20px;
