--- a/less/typography.less
+++ b/less/typography.less
@@ -120,6 +120,9 @@ p {
         font-size: 18px;
         line-height: 24px;
     }
+    &.upper{
+        text-transform: uppercase;
+    }
 }
 .section_title{
     font-size: 28px;
@@ -198,4 +201,7 @@ a{
 
 .red{
     color: @text-red;
+}
+.white{
+    color: white;
 }
