--- a/less/typography.less
+++ b/less/typography.less
@@ -5,31 +5,59 @@
 
 @font-face {
     font-family: 'SegoeUI';
-    src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf') format("ttf");
+    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot);
+    src:local("Segoe UI"),local("Segoe"),local("Segoe WP"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot#iefix) format("embedded-opentype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.svg#web) format("svg");
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'SegoeUILight';
-    src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf");
+    src: local('Segoe UI'), 
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.eot#iefix) format("embedded-opentype"),
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"), 
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"), 
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.svg#web) format("svg");
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'SegoeUISemiLight';
-    src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf");
+    src: local('Segoe UI'), 
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.eot#iefix) format("embedded-opentype"),
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"),
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"), 
+    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.svg#web) format("svg");
     font-weight: 200;
 }
 
-@font-face {
-    font-family: 'SegoeUISemiBold';
-    src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.ttf') format("ttf");
+@font-face{
+    font-family:'SegoeUISemiBold';
+    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot);src:local("Segoe UI Semibold"),local("Segoe WP Semibold"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot#iefix) format("embedded-opentype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.svg#web) format("svg");
+    
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'SegoeUIBold';
-    src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.ttf') format("ttf");
+    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot);src:local("Segoe UI Bold"),
+    local("Segoe WP Bold"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot#iefix) format("embedded-opentype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.svg#web) format("svg");
     font-weight: 700;
 }
 
@@ -174,6 +202,46 @@ nav a{
     background-size: contain;
     background-position: 0 0;
 }
+
+//type section
+.semibold{
+    font-family: 'SegoeUISemiBold';
+    font-weight: 600;
+}
+.bold{
+    font-family: 'SegoeUIBold';
+    font-weight: 700;
+}
+.semilight{
+    font-family: 'SegoeUISemiLight';
+    font-weight: 200;
+}
+.light{
+    font-family: 'SegoeUILight';
+    font-weight: 100;
+}
+.f-big{
+    font-size: 18px;
+    line-height: 20px;
+}
+.f-bigger{
+    font-size: 20px;
+    line-height: 22px;
+}
+.f-biggerer{
+    font-size: 22px;
+    line-height: 24px;
+}
+.f-bigger-still{
+    font-size: 28px;
+    line-height: 30px;
+}
+.f-super{
+    font-size: 36px;
+    line-height: 38px;
+}
+
+
 .m-skip-to-main{
     display: none;
 }
