--- a/styles/main.css
+++ b/styles/main.css
@@ -289,27 +289,30 @@ nav ul li a.orange:active {
 }
 @font-face {
   font-family: 'SegoeUI';
-  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf') format("ttf");
+  src: url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot);
+  src: local("Segoe UI"), local("Segoe"), local("Segoe WP"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot#iefix) format("embedded-opentype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.svg#web) format("svg");
   font-weight: 400;
 }
 @font-face {
   font-family: 'SegoeUILight';
-  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf");
+  src: local('Segoe UI'), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.eot#iefix) format("embedded-opentype"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.svg#web) format("svg");
   font-weight: 100;
 }
 @font-face {
   font-family: 'SegoeUISemiLight';
-  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf");
+  src: local('Segoe UI'), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.eot#iefix) format("embedded-opentype"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.svg#web) format("svg");
   font-weight: 200;
 }
 @font-face {
   font-family: 'SegoeUISemiBold';
-  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semibold/latest.ttf') format("ttf");
+  src: url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot);
+  src: local("Segoe UI Semibold"), local("Segoe WP Semibold"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot#iefix) format("embedded-opentype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.svg#web) format("svg");
   font-weight: 600;
 }
 @font-face {
   font-family: 'SegoeUIBold';
-  src: local('Segoe UI'), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff2') format("woff2"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.woff') format("woff"), url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Bold/latest.ttf') format("ttf");
+  src: url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot);
+  src: local("Segoe UI Bold"), local("Segoe WP Bold"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot#iefix) format("embedded-opentype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.svg#web) format("svg");
   font-weight: 700;
 }
 body {
@@ -443,6 +446,42 @@ nav a {
   background-image: url('assets/arrow.svg');
   background-size: contain;
   background-position: 0 0;
+}
+.semibold {
+  font-family: 'SegoeUISemiBold';
+  font-weight: 600;
+}
+.bold {
+  font-family: 'SegoeUIBold';
+  font-weight: 700;
+}
+.semilight {
+  font-family: 'SegoeUISemiLight';
+  font-weight: 200;
+}
+.light {
+  font-family: 'SegoeUILight';
+  font-weight: 100;
+}
+.f-big {
+  font-size: 18px;
+  line-height: 20px;
+}
+.f-bigger {
+  font-size: 20px;
+  line-height: 22px;
+}
+.f-biggerer {
+  font-size: 22px;
+  line-height: 24px;
+}
+.f-bigger-still {
+  font-size: 28px;
+  line-height: 30px;
+}
+.f-super {
+  font-size: 36px;
+  line-height: 38px;
 }
 .m-skip-to-main {
   display: none;
@@ -759,18 +798,25 @@ hr {
 #section-5-3 p {
   margin-bottom: 10px;
 }
+#section-5-6 .title,
+#section-5-6 img {
+  margin-bottom: 20px;
+}
 .table-row {
   display: grid;
   grid-column: span 6;
-  grid-template-columns: 1fr 1fr 1.5fr 1.5fr;
+  grid-template-columns: 1fr 1.5fr 1.75fr 1.75fr;
+  grid-gap: 20px;
 }
 .table-row.gray {
   background: #dedede;
+  padding: 10px 2px;
 }
 .table-row > div {
   display: grid;
 }
-.dos .title {
+.dos .title,
+.dos.title {
   color: #107c10;
 }
 .dos p {
@@ -779,7 +825,8 @@ hr {
 .donts p {
   text-decoration: line-through;
 }
-.donts .title {
+.donts .title,
+.donts.title {
   color: #a80000;
   text-decoration: none;
 }
@@ -812,6 +859,14 @@ h4 {
   grid-template-columns: repeat(8, 1fr);
   grid-column-gap: 20px;
 }
+.full-row {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-column: span 6;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
 p {
   grid-column: span 7;
 }
@@ -830,9 +885,29 @@ picture {
 .full:hover {
   text-decoration: underline;
 }
+.fat-thirds {
+  grid-column: span 2;
+  grid-template-columns: 1fr;
+}
+.fat-thirds img {
+  width: 100%;
+}
+.fat-thirds p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 .single {
   grid-column: span 1;
 }
 .single p {
   margin-top: 10px;
+}
+.v-center {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.underline {
+  border-bottom: 1px solid #dadada;
+  padding-bottom: 20px;
 }
