--- a/less/content.less
+++ b/less/content.less
@@ -9,17 +9,15 @@ h1{
     margin-bottom: 20px;
 }
 
-nav{
-   background: @nav-dk;
-   height: 100%;
-   li:active{
-       background: @nav-lt;
-   }
-}
 main > section{
     padding-top: 95px;
     padding-bottom: 95px;
     display: grid;  
+}
+
+//set items
+img{
+    max-width: 100%;
 }
 
 //background colors
@@ -259,3 +257,4 @@ main > section{
     padding-top: 20px;
     font-family: 'SegoeUISemiLight';
 }
+
