--- a/less/typography.less
+++ b/less/typography.less
@@ -194,6 +194,7 @@ p {
 nav a{
     font-size: 16px;
     line-height: 42px;
+    text-decoration: none;
 }
 .cross-through{
     font-size: 32px;
@@ -250,7 +251,7 @@ a{
 }
 .cta{
     background: @body-text-black;
-    grid-column: span 2;
+    grid-column: span 3;
     padding: 15px 10px;
     a{
         color: white;
@@ -260,6 +261,9 @@ a{
             content: "\E76C";	
             padding-left: 20px;
             font-family: "MWF-MDL2";
+            &:hover{
+                text-decoration: none;
+            }
         }    
         &:hover{
             text-decoration: underline;
