adding links for guides

--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @yellow: #bad80a;
 @orange: #FF8C00;
 @green: #00b294;
+@green-active: #00ffd4;
 @dk-gray: #cacaca;
 @lt-gray: #dadada;
 @lt-black: #2d2d2d;
