--- a/less/nav.less
+++ b/less/nav.less
@@ -1,23 +1,41 @@
 nav{
-    background: @nav-dk;
+    background: @nav-lt;
     overflow-y: scroll;
     height: 100%;
+    position: fixed;
+    top:0;
+    justify-self: stretch;
+    display: grid;
+    
     a{
         text-decoration: none  !important;
+        padding-right: 20px;
+
     }
     ul{
         list-style-type: none;
+        margin-top: 0;
         &#menu-list{
             padding-left:0;
         }
+        &.sub-nav{
+            padding-left: 20px;
+            display: none;
+        }
         li {
-            .active{
-                background: @nav-lt;
+            padding-left: 20px;
+            &.active{
+                background: @nav-dk;
+                width: 100%;
+                .sub-nav{
+                    display: block;
+                }
+                &.purple{
+                    color: @purple;
+                }
             }
             a{
                 color: white;
-                text-decoration: none;
-
                 &.purple:hover{
                     color: @purple;
                 }
@@ -35,5 +53,8 @@ nav{
                 }
             }
         }
+    }
+    button{
+        display: none;
     }
 }
