--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,12 @@
 @purple: #b4a0ff;
+@purple-active: #d8ceff;
 @blue: #00bcf2;
+@blue-active: #71dfff;
 @ms-blue: #076dcc;
 @yellow: #bad80a;
+@yellow-active: #d4f129;
 @orange: #FF8C00;
+@orange-active: #ffab45;
 @green: #00b294;
 @green-active: #00ffd4;
 @dk-gray: #cacaca;
